--- a/README.pod
+++ b/README.pod
@@ -5,7 +5,7 @@ This is Perl module B<WebService::BitFlyer>.
 
 =begin html
 
-<a href="http://travis-ci.org/bayashi/WebService-BitFlyer"><img src="https://secure.travis-ci.org/bayashi/WebService-BitFlyer.png"/></a> <a href="https://coveralls.io/r/bayashi/WebService-BitFlyer"><img src="https://coveralls.io/repos/bayashi/WebService-BitFlyer/badge.png?branch=master"/></a>
+<a href="http://travis-ci.org/bayashi/WebService-BitFlyer"><img src="https://secure.travis-ci.org/bayashi/WebService-BitFlyer.png"/></a>
 
 =end html
 
